endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: harbor
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.100.167 
    ports:
      - port: 80
