service.yaml
kind: Service
apiVersion: v1
metadata:
  name: harbor 
  namespace: default 
spec:
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 80
