ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harbor 
  namespace: default 
spec:
  rules:
  - host: gmt.reg.me 
    http:
      paths:
      - path: /
        backend:
          serviceName: harbor 
          servicePort: 80
